# biocritix-web

./: .gitignore  package-lock.json  package.json  pyproject.toml
app/(auth)/: actions.ts
app/(auth)/login/: page.tsx
example_python_workflow_code/: BiorxivSearcher.py  Pipfile  download_paper_html.py  one-shot-attempt.py
example_python_workflow_code/db/: chroma.sqlite3
